<resources>
    <string name="app_name">EzBudget</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="AddNew">Add New</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Save">Save</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="operation">Operation</string>
    <string name="deleteConfirmation">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Oper_Income">Income</string>
    <string name="Oper_Outcome">Outcome</string>
    <string name="Oper_Informative">Informative</string>
    <string name="summary">Summary for:</string>
    <string name="button_bills">Bills</string>
    <string name="button_income">Income</string>
    <!-- CATEGORIES -->
    <string name="catTitle">Categories</string>
    <string name="catEdit">Edit Category</string>
    <string name="catDelete">Delete Category</string>
    <string name="catSave">Save Category</string>
    <string name="catList">Categories</string>
    <!-- BALANCE DATA -->
    <string name="date">Date</string>
    <string name="balDataAmount">Amount</string>
    <string name="balDataTitle">Financial Data</string>
    <string name="balDataList">Balance Data</string>
    <string name="balDataEdit">Edit Balance Data</string>
    <string name="balDataBill">Bill</string>
    <string name="balDataIncome">Income</string>
    <!-- BALANCE DATA RECURRENT-->
    <string name="balDataRecTitle">Budget Items</string>
    <string name="balDataRecList">Budget Items</string>
    <string name="balDataRecEdit">Edit Items</string>
    <string name="addToSummary">Add Summary</string>
    <!-- BALANCE VIEW -->
    <string name="viewTitle">Title</string>
    <string name="balViewList">Periods</string>
    <!-- DATES -->
    <string name="dateInitial">Initial Date</string>
    <string name="dateFinal" translatable="false">End Date</string>
    <string name="dateKey">Key Date</string>

    <!-- Recurrence text -->
    <string name="viewCurrent">Is Current</string>
    <string name="recOnce">Once</string>
    <string name="recWeekly">Weekly</string>
    <string name="recBiWeekly">Bi Weekly</string>
    <string name="recMonthly">Monthly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
