<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerListCat"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/catList" />
        <item
            android:id="@+id/drawerListBalData"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/balDataList" />
        <item
            android:id="@+id/drawerListRecurrent"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/balDataRecList" />
        <item
            android:id="@+id/drawerListBalView"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/balViewList" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
