<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mFragments.DispBalViewFragment"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/viewCurrent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/dispBalViewIsCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/viewTitle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/dispBalViewEditViewTitle"
                android:layout_width="175dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/dateInitial" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/dispBalViewEditInitialDate"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/dateFinal" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/dispBalViewEditFinalDate"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/dateKey" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/dispBalViewEditKeyDate"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editBalViewDispBalViewDescr"
                android:layout_width="175dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dispBalViewSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save" />

            <Button
                android:id="@+id/dispBalViewUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Update" />

            <Button
                android:id="@+id/dispBalViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delete" />


        </LinearLayout>
    </LinearLayout>

</FrameLayout>