<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <EditText
        android:id="@+id/dispCatTextName"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/dispCatTextView1"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dispCatTextName"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dispCatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dispCatDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dispCatTextName" />

    <TextView
        android:id="@+id/dispCatTextView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dispCatDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/operation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dispCatDescription" />

    <EditText
        android:id="@+id/dispCatDescription"
        android:layout_width="257dp"
        android:layout_height="165dp"
        android:layout_alignLeft="@+id/dispCatTextName"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dispCatTextName">

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/dispCatRadioGroupOperation"
        android:layout_width="342dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dispCatDescription">

        <RadioButton
            android:id="@+id/dispCatRadioIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Oper_Income" />

        <RadioButton
            android:id="@+id/dispCatRadioOutcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Oper_Outcome" />

        <RadioButton
            android:id="@+id/dispCatRadioInformative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Oper_Informative" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dispCatRadioGroupOperation"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/dispCatButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="144dp"
            android:onClick="run"
            android:text="@string/catSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>