<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context=".mFragments.ListRecBalDataFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ProgressBar
                android:id="@+id/listRecBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="382dp"
                android:layout_height="31dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:progress="25"
                tools:layout_editor_absoluteX="1dp" />


            <ImageView
                android:id="@+id/listRecImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/listRecTitle"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_below="@+id/myBar"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:text="@string/balDataRecTitle"
                android:textColor="#ff16ff01"
                android:textSize="35dp"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listRecRecicler"
                android:layout_width="368dp"
                android:layout_height="309dp"
                android:layout_marginTop="30dp"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteX="8dp"></android.support.v7.widget.RecyclerView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

            <Button
                android:id="@+id/listRecAddNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddNew" />
    <Button
        android:id="@+id/listRecAddToSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addToSummary" />

    <Button
        android:id="@+id/listRecUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update" />

</LinearLayout>
        </LinearLayout>

    </FrameLayout>